Mudando os planos index.html

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         </div>
       </section>
       <!-- ========== Mensalidades da Shape de Elite ========== -->
-      <section id="fourth-section">
+      <section id="plan-choice">
         <div id="plans">
           <div class="plan_card" id="basic">
             <h1 class="plan-name">Básico</h1>
@@ -567,5 +567,9 @@
     <script src="javaScript/homePage/videoControls.js"></script>
     <script src="javaScript/homePage/openSideBar.js"></script>
     <script src="javaScript/homePage/slide.js"></script>
+    <script src="../javaScript/purchasePage/validations.js"></script>
+    <script src="../javaScript/purchasePage/callSections.js"></script>
+
   </body>
 </html>
+
