--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
         </ul>
         <a href="pages/purchase.html" id="place-icon"> Seja elite!</a>
       </nav>
+
+    <header id="top-content">
+      <ul id="steps-list">
+        <li class="steps">
+          <div class="progress-count" id="step1">1</div>
+          <span>Assinatura</span>
+        </li>
+        <li class="steps">
+          <div class="progress-count close" id="step2">2</div>
+          <span>Identificação</span>
+        </li>
+        <li class="steps">
+          <div class="progress-count close" id="step3">3</div>
+          <span>Pagamento</span>
+        </li>
+        <li class="steps">
+          <div class="progress-count close" id="step4">4</div>
+          <span>Finalizado!</span>
+        </li>
+      </ul>
+
     </header>
     <main>
       <video id="background-video" autoplay muted plays-inline loop>
