--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
               <h4 class="original_price">De <s>R$170,90</s> por</h4>
               <h2 class="offer-plan_price">R$115,90</h2>
             </div>
-            <a class="button a" href="#identification">Escolher plano</a>
+            <a class="button a" href="pages
+/purchase.html">Escolher plano</a>
           </div>
         </div>
       </section>
