--- a/index.html
+++ b/index.html
@@ -22,27 +22,6 @@
         </ul>
         <a href="pages/purchase.html" id="place-icon"> Seja elite!</a>
       </nav>
-
-    <header id="top-content">
-      <ul id="steps-list">
-        <li class="steps">
-          <div class="progress-count" id="step1">1</div>
-          <span>Assinatura</span>
-        </li>
-        <li class="steps">
-          <div class="progress-count close" id="step2">2</div>
-          <span>Identificação</span>
-        </li>
-        <li class="steps">
-          <div class="progress-count close" id="step3">3</div>
-          <span>Pagamento</span>
-        </li>
-        <li class="steps">
-          <div class="progress-count close" id="step4">4</div>
-          <span>Finalizado!</span>
-        </li>
-      </ul>
-
     </header>
     <main>
       <video id="background-video" autoplay muted plays-inline loop>
@@ -411,7 +390,7 @@
         </div>
       </section>
       <!-- ========== Mensalidades da Shape de Elite ========== -->
-      <section id="plan-choice">
+      <section id="fourth-section">
         <div id="plans">
           <div class="plan_card" id="basic">
             <h1 class="plan-name">Básico</h1>
@@ -513,8 +492,7 @@
               <h4 class="original_price">De <s>R$170,90</s> por</h4>
               <h2 class="offer-plan_price">R$115,90</h2>
             </div>
-            <a class="button a" href="pages
-/purchase.html">Escolher plano</a>
+            <a class="button a" href="#identification">Escolher plano</a>
           </div>
         </div>
       </section>
@@ -589,9 +567,5 @@
     <script src="javaScript/homePage/videoControls.js"></script>
     <script src="javaScript/homePage/openSideBar.js"></script>
     <script src="javaScript/homePage/slide.js"></script>
-    <script src="../javaScript/purchasePage/validations.js"></script>
-    <script src="../javaScript/purchasePage/callSections.js"></script>
-
   </body>
 </html>
-
